Mise ├á jour automatique

--- a/main.html
+++ b/main.html
@@ -384,7 +384,7 @@
     <div class="container">
       <div class="hero-content">
         <!-- <h1>VOTRE PARTENAIRE DE CONFIANCE</h1> -->
-        <h1>VOTRE PARTENAIRE DE <br>
+        <h1>HAMZA VOTRE PARTENAIRE DE <br>
           <span class="typed-text"></span><span class="cursor">&nbsp;</span></h1>
 
         <p>NBS Holding offre aux étrangers 8 services essentiels pour faciliter leur installation et leur vie quotidienne</p>
